--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/chronus1.svg" /> -->
-    <link rel="alternate icon" type="image/jpeg" href="/chronus1.jpg" />
+    <link rel="alternate icon" type="image/jpeg" href="/chronus-white.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chronus</title>
   </head>
