--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/chronus1.svg" /> -->
-    <link rel="alternate icon" type="image/jpeg" href="/chronus-white.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chronus.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chronus</title>
   </head>
